--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-Django==5.0
-gunicorn
-numpy
-joblib
-tensorflow==2.12
-scikit-learn
-pillow
+# Django & WSGI
+Django==5.0.1
+gunicorn==21.2.0
+
+# Machine Learning & Data Processing
+numpy==1.23.5
+joblib==1.3.2
+scikit-learn==1.2.2
+pandas==2.1.4
+
+# TensorFlow (CPU only)
+tensorflow-cpu==2.12.0
+
+# Keras (included in TF)
+keras==2.12.0
+
+# Misc dependencies
+pillow==10.2.0
