--- a/render.yaml
+++ b/render.yaml
@@ -4,12 +4,17 @@ services:
     env: python
     region: singapore
     runtime: python3
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "cd FRONTEND && gunicorn FRONTEND.wsgi:application"
     plan: free
     autoDeploy: true
+
+    # Install dependencies
+    buildCommand: "pip install -r requirements.txt"
+
+    # Start Gunicorn from inside FRONTEND folder
+    startCommand: "cd FRONTEND && gunicorn FRONTEND.wsgi:application --bind 0.0.0.0:$PORT --workers 1"
+
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11
+        value: 3.11.6
       - key: DJANGO_SETTINGS_MODULE
         value: FRONTEND.settings
