--- a/render.yaml
+++ b/render.yaml
@@ -10,8 +10,7 @@ services:
     # Install dependencies
     buildCommand: "pip install -r requirements.txt"
 
-    # Start Gunicorn from inside FRONTEND folder
-    startCommand: "gunicorn --chdir FRONTEND FRONTEND.wsgi:application --bind 0.0.0.0:$PORT"
+   startCommand: "gunicorn --pythonpath FRONTEND FRONTEND.wsgi:application --bind 0.0.0.0:$PORT"
 
     envVars:
       - key: PYTHON_VERSION
