--- a/render.yaml
+++ b/render.yaml
@@ -4,17 +4,12 @@ services:
     env: python
     region: singapore
     runtime: python3
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn FRONTEND.FRONTEND.wsgi:application"
     plan: free
     autoDeploy: true
-
-    # Install dependencies
-    buildCommand: "pip install -r requirements.txt"
-
-    startCommand: "gunicorn FRONTEND.FRONTEND.wsgi:application"
-
-
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.6
       - key: DJANGO_SETTINGS_MODULE
-        value: FRONTEND.settings
+        value: FRONTEND.FRONTEND.settings
