--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: python
     region: singapore
     runtime: python3
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn FRONTEND.FRONTEND.wsgi:application"
+    buildCommand: "cd FRONTEND && pip install -r ../requirements.txt"
+    startCommand: "cd FRONTEND && gunicorn FRONTEND.wsgi:application"
     plan: free
     autoDeploy: true
     envVars:
