--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,17 @@
 Django==5.0.1
 gunicorn==21.2.0
 
-# Machine Learning & Data Processing
+# Machine Learning
 numpy==1.23.5
 joblib==1.3.2
 scikit-learn==1.2.2
 pandas==2.1.4
 
-# TensorFlow (CPU only)
-tensorflow-cpu==2.12.0
+# Lightweight TensorFlow (NO JAX)
+tensorflow==2.10.0
+keras==2.10.0
 
-# Keras (included in TF)
-keras==2.12.0
-
-# Misc dependencies
+# Misc
 pillow==10.2.0
+h5py==3.7.0
+protobuf==3.20.*
