--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,10 @@
-# Django & WSGI
 Django==5.0.1
 gunicorn==21.2.0
 
-# Machine Learning
 numpy==1.23.5
-joblib==1.3.2
-scikit-learn==1.2.2
 pandas==2.1.4
-
-# Lightweight TensorFlow (NO JAX)
-tensorflow==2.10.0
-keras==2.10.0
-
-# Misc
+scikit-learn==1.2.2
+joblib==1.3.2
 pillow==10.2.0
-h5py==3.7.0
-protobuf==3.20.*
+
+tflite-runtime==2.14.0
